Change .gitignore for files created while running.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .DS_Store
+check-node_*
+compact-pingsnode_*
+gentree-node_*
+nodes_read.txt
+out-gentree.txt
+sanity-node_*
+tiv-node_*
+nodes_read.txt
+out-gentree.txt
