--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,20 @@
-language : go
-script : go test ./membershipchainservice
+notifications:
+  email: false
+
+matrix:
+  include:
+    - language: go
+
+      go:
+        - 1.13.x
+
+      script:
+        - env GO111MODULE=on make test
+
+
+
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.cache/go-build
+    - $GOPATH/pkg/mod
