Adding a graph for region creations.

--- a/latex/thesis_template/.gitignore
+++ b/latex/thesis_template/.gitignore
@@ -1,9 +1,9 @@
-/*.aux
-/*.bbl
-/*.bcf
-/*.run.xml
-/*.toc
-/*.blg
-/*.log
-/*.out
-/*.synctex*
+*.aux
+*.bbl
+*.bcf
+*.run.xml
+*.toc
+*.blg
+*.log
+*.out
+*.synctex*
